# deep-research-open-source

./: main.py  pyproject.toml
notebooks/: research_agent.ipynb  research_supervisor.ipynb  scoping.ipynb
notebooks/.ipynb_checkpoints/: research_agent-checkpoint.ipynb  research_supervisor-checkpoint.ipynb  scoping-checkpoint.ipynb
src/deep_research/: openrouter.py  prompts.py  research_agent.py  research_scope.py  research_state.py  research_supervisor.py  scope_research.py  state_multi_agent_supervisor.py  state_scope.py  tavily.py  utils.py
src/deep_research_opensource.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
