[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-research-opensource"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.5.4",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain_community>=0.3.27",
    "langchain_tavily>=0.2.7",
    "langchain_mcp_adapters>=0.1.9",
    "pydantic>=2.0.0",
    "rich>=14.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
    "tavily-python>=0.5.0",
    "langchain-google-vertexai>=2.1.2",
    "langchain-deepseek>=0.1.4",
    "langchain-google-genai>=2.1.12",
    "langchain-xai>=0.2.5",
    "jupyter-contrib-nbextensions>=0.7.0",
    "jupyter-nbextensions-configurator>=0.6.4",
]

[tool.setuptools.packages.find]
where = ["src"]
